# Nibbler

./: .gitignore  CMakeLists.txt  README.md
inc/: GeorgeRRMartin.hpp  Hiddleston.hpp  IGraphic.hpp  Kasparov.hpp  Rolex.hpp  nibbler.hpp
libs/ncurses/: CMakeLists.txt
libs/ncurses/inc/: Ncurses.hpp
libs/ncurses/srcs/: Ncurses.cpp
libs/sdl/: CMakeLists.txt
libs/sdl/inc/: Sdl.h  Sdl.hpp
libs/sdl/srcs/: Sdl.cpp
libs/sfml/: CMakeLists.txt
libs/sfml/inc/: Sfml.h  Sfml.hpp
libs/sfml/srcs/: Sfml.cpp
srcs/: GeorgeRRMartin.cpp  Hiddleston.cpp  Kasparov.cpp  Rolex.cpp  main.cpp
